--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <center>
               <button class="btn btn-warning" onclick="startClassification();"> START </button>
               <h3 id="result_label">I can hear - </h3>
-              <h4 id="result_confidence"></h4>
+              <h4 id="result_confidence"> Detected voice is of - </h4>
               <br>
               <img src="ear.png" width="300" height="300"
           </center>
